--- a/package.json
+++ b/package.json
@@ -1,31 +1,39 @@
 {
-  "name": "@lynxwall/lynxbdd-monorepo",
-  "type": "module",
-  "version": "1.0.0",
- 	"private": true,
-  "packageManager": "pnpm@8.15.4",
-  "description": "",
-  "author": "",
-  "license": "GPL-3.0",
-  "preinstall": "npx only-allow pnpm",
-  "keywords": ["bdd", "cucumber", "gherkin", "specflow", "tsflow", "typescript"],
-  "engines": {
-    "node": ">=20.11.1"
-  },
-  "scripts": {
-    "build": "turbo run build --no-daemon",
-    "build:full": "turbo run build --no-daemon --force",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "test": "echo \"No test specified yet\" && exit 0"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^2.8.0",
-    "@changesets/cli": "^2.27.1",
-    "eslint": "^8.57.0",
-    "only-allow": "^1.2.1",
-    "turbo": "^1.12.5",
-    "typescript": "^5.3.3",
-    "unbuild": "^2.0.0"
-  }
+	"name": "@lynxbdd/lynxbdd-monorepo",
+	"type": "module",
+	"version": "1.0.0",
+	"private": true,
+	"packageManager": "pnpm@8.15.4",
+	"description": "",
+	"author": "",
+	"license": "GPL-3.0",
+	"preinstall": "npx only-allow pnpm",
+	"keywords": [
+		"bdd",
+		"cucumber",
+		"gherkin",
+		"specflow",
+		"tsflow",
+		"typescript"
+	],
+	"engines": {
+		"node": ">=20.11.1"
+	},
+	"scripts": {
+		"build": "turbo run build --no-daemon",
+		"build:full": "turbo run build --no-daemon --force",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"test": "echo \"No test specified yet\" && exit 0"
+	},
+	"devDependencies": {
+		"@antfu/eslint-config": "^2.8.0",
+		"@changesets/cli": "^2.27.1",
+		"eslint": "^8.57.0",
+		"eslint-plugin-format": "^0.1.0",
+		"only-allow": "^1.2.1",
+		"turbo": "^1.12.5",
+		"typescript": "^5.3.3",
+		"unbuild": "^2.0.0"
+	}
 }
