--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"devDependencies": {
 		"@antfu/eslint-config": "^2.8.0",
 		"@changesets/cli": "^2.27.1",
+		"@cucumber/cucumber": "^10.3.1",
 		"eslint": "^8.57.0",
 		"eslint-plugin-format": "^0.1.0",
 		"only-allow": "^1.2.1",
