--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,11 +1,7 @@
 {
 	"name": "@lynxbdd/tsconfig",
 	"version": "0.0.0",
-	"license": "GPL-3.0",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/LynxBDD/lynxbdd.git"
-	},
+	"private": true,
 	"dependencies": {
 		"@vue/tsconfig": "^0.4.0"
 	}
